--- a/music_player_app/pubspec.yaml
+++ b/music_player_app/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
+  on_audio_query: ^2.9.0
+  permission_handler: ^11.3.0
+  logger: ^1.0.0
 
 dev_dependencies:
   flutter_test:
