--- a/music_player_app/pubspec.yaml
+++ b/music_player_app/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
+  provider: ^6.1.1
   on_audio_query: ^2.9.0
   just_audio: ^0.9.9
   permission_handler: ^11.3.0
