--- a/music_player_app/android/app/src/main/AndroidManifest.xml
+++ b/music_player_app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    
+     <!-- for below android 13-->
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- for above android 13-->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
     <application
+        android:requestLegacyExternalStorage="true" 
         android:label="music_player_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
