--- a/music_player_app/pubspec.yaml
+++ b/music_player_app/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   on_audio_query: ^2.9.0
   just_audio: ^0.9.9
   permission_handler: ^11.3.0
+  device_info_plus: ^9.1.2
   logger: ^1.0.0
 
 dev_dependencies:
