--- a/music_player_app/pubspec.yaml
+++ b/music_player_app/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   just_audio: ^0.9.9
   permission_handler: ^11.3.0
   device_info_plus: ^9.1.2
+  shared_preferences: ^2.2.2
   logger: ^1.0.0
 
 dev_dependencies:
